--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+<html lang="en-US">
+    <head>
         <link rel="stylesheet" href="index.css">
+        <meta name="description" content="Rasheeda's Blackjack">
+        <meta title="Rasheeda's Blackjack game">
     </head>
     <body>
         <h1>Blackjack</h1>
