added meta name

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="index.css">
         <meta name="description" content="Rasheeda's Blackjack">
         <meta title="Rasheeda's Blackjack game">
+        <meta name="author" content="Rasheeda Sarguro">
     </head>
     <body>
         <h1>Blackjack</h1>
